--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ footer {
     display: inline-block;
     padding: 10px;
     border-radius: 10px;
-    border: solid 2px black;
-    background-color: blue;
+    border: solid 1px white;
+    background-color: rgb(80, 80, 220);
     vertical-align: middle;
     cursor: pointer;
 }
@@ -98,7 +98,7 @@ footer {
     border: solid 1px white;
     border-radius: 5px;
     vertical-align: middle;
-    background-color: rgb(77, 77, 216);
+    background-color: rgb(80, 80, 220);
 }
 .space_key {
     width: 200px;
@@ -106,4 +106,5 @@ footer {
 footer {
     text-align: center;
     font-size: 1.2rem;
+    line-height: 30px;
 }
